--- a/_sass/_07_layout.scss
+++ b/_sass/_07_layout.scss
@@ -121,7 +121,7 @@ body.video cite { color: #fff; }
 
 @media #{$medium-only} {
     #logo img {
-        margin-top: 60px;
+        margin-top: 60px; /* 60px */
     }
     #masthead {
         height: 280px;
@@ -144,7 +144,7 @@ body.video cite { color: #fff; }
 
 @media #{$large-only} {
     #logo img {
-        margin-top: 80px;
+        margin-top: 80px;  /* 80px */
     }
     #masthead {
         height: 310px;
@@ -167,7 +167,7 @@ body.video cite { color: #fff; }
 
 @media #{$xlarge-up} {
     #logo img {
-        margin-top: 110px;
+        margin-top: 110px;  /*110px; */
     }
     #masthead {
         height: 380px;
