--- a/_includes/_sidebar.html
+++ b/_includes/_sidebar.html
@@ -9,7 +9,7 @@
 
 
 	<div class="border-dotted radius b30">
-		<img src="" alt="uh, Placekitten">
+		<img src="" alt="">
 		<p class="text-left">
 			<a href=""></a>
 		</p>
