latex and moved images for blogs

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -4,6 +4,11 @@ format: blog-index
 # Don't index these pages dear Google.
 noindex: true
 ---
+
+<script type="text/javascript"
+    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
+
 <div class="row">
 	<div class="medium-8 columns t30">
 		{% include _pagination.html %}
