--- a/_layouts/page-fullwidth.html
+++ b/_layouts/page-fullwidth.html
@@ -2,6 +2,11 @@
 layout: default
 format: page-fullwidth
 ---
+
+<script type="text/javascript"
+    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
+
 {% if page.image.title %}
 <div class="row t30">
 	<div class="small-12 columns">
@@ -34,5 +39,3 @@ format: page-fullwidth
 		</article>
 	</div><!-- /.medium-12.columns -->
 </div><!-- /.row -->
-
-
